templates/aws-eks.yml
---
    Parameters:
    
      EnvironmentName:
        Description: EKS network script
        Type: String
    
      VpcBlock:
        Type: String
        Default: 192.168.0.0/16
        Description: The CIDR range for the VPC. This should be a valid private (RFC 1918) CIDR range.
    
      Subnet01Block:
        Type: String
        Default: 192.168.64.0/18
        Description: CidrBlock for subnet 01 within the VPC
    
      Subnet02Block:
        Type: String
        Default: 192.168.128.0/18
        Description: CidrBlock for subnet 02 within the VPC
    
      Subnet03Block:
        Type: String
        Default: 192.168.192.0/18
        Description: CidrBlock for subnet 03 within the VPC. This is used only if the region has more than 2 AZs.
      
      ClusterName:
        Description: EKS cluster name
        Type: String
    
      BootstrapArguments:
        Description: Arguments to pass to the bootstrap script. See files/bootstrap.sh in https://github.com/awslabs/amazon-eks-ami
        Type: String
        Default: ""
    
      NodeGroupName:
        Description: EKS node group name
        Type: String
    
      NodeAutoScalingGroupDesiredCapacity:
        Description: Desired capacity of Node Group ASG.
        Type: Number
        Default: 3
    
      KeyName:
        Description: The EC2 Key Pair to allow SSH access to the instances
        Type: AWS::EC2::KeyPair::KeyName
    
    Metadata:
      AWS::CloudFormation::Interface:
        ParameterGroups:
          -
            Label:
              default: "Worker Network Configuration"
            Parameters:
              - VpcBlock
              - Subnet01Block
              - Subnet02Block
              - Subnet03Block
    
    Conditions:
      Has2Azs:
        Fn::Or:
          - Fn::Equals:
            - {Ref: 'AWS::Region'}
            - ap-south-1
          - Fn::Equals:
            - {Ref: 'AWS::Region'}
            - ap-northeast-2
          - Fn::Equals:
            - {Ref: 'AWS::Region'}
            - ca-central-1
          - Fn::Equals:
            - {Ref: 'AWS::Region'}
            - cn-north-1
    
      HasMoreThan2Azs:
        Fn::Not:
          - Condition: Has2Azs
    
    # ------------------ Network Configuration --------------------
    
    Resources:
      VPC:
        Type: AWS::EC2::VPC
        Properties:
          CidrBlock:  !Ref VpcBlock
          EnableDnsSupport: true
          EnableDnsHostnames: true
          Tags:
          - Key: Name
            Value: !Ref EnvironmentName
    
      InternetGateway:
        Type: "AWS::EC2::InternetGateway"
        Properties:
                Tags:
                    - Key: Name
                      Value: !Ref EnvironmentName
    
      VPCGatewayAttachment:
        Type: "AWS::EC2::VPCGatewayAttachment"
        Properties:
          InternetGatewayId: !Ref InternetGateway
          VpcId: !Ref VPC
    
      RouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
          VpcId: !Ref VPC
          Tags:
          - Key: Name
            Value: !Sub ${EnvironmentName} Public Routes
          - Key: Network
            Value: Public
    
      Route:
        DependsOn: VPCGatewayAttachment
        Type: AWS::EC2::Route
        Properties:
          RouteTableId: !Ref RouteTable
          DestinationCidrBlock: 0.0.0.0/0
          GatewayId: !Ref InternetGateway
    
      Subnet01:
        Type: AWS::EC2::Subnet
        Metadata:
          Comment: Subnet 01
        Properties:
          AvailabilityZone:
            Fn::Select:
            - '0'
            - Fn::GetAZs:
                Ref: AWS::Region
          CidrBlock:
            Ref: Subnet01Block
          VpcId:
            Ref: VPC
          Tags:
          - Key: Name
            Value: !Sub "${EnvironmentName}-Subnet01"
    
      Subnet02:
        Type: AWS::EC2::Subnet
        Metadata:
          Comment: Subnet 02
        Properties:
          AvailabilityZone:
            Fn::Select:
            - '1'
            - Fn::GetAZs:
                Ref: AWS::Region
          CidrBlock:
            Ref: Subnet02Block
          VpcId:
            Ref: VPC
          Tags:
          - Key: Name
            Value: !Sub "${EnvironmentName}-Subnet02"
    
      Subnet03:
        Condition: HasMoreThan2Azs
        Type: AWS::EC2::Subnet
        Metadata:
          Comment: Subnet 03
        Properties:
          AvailabilityZone:
            Fn::Select:
            - '2'
            - Fn::GetAZs:
                Ref: AWS::Region
          CidrBlock:
            Ref: Subnet03Block
          VpcId:
            Ref: VPC
          Tags:
          - Key: Name
            Value: !Sub "${EnvironmentName}-Subnet03"
    
      Subnet01RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          SubnetId: !Ref Subnet01
          RouteTableId: !Ref RouteTable
    
      Subnet02RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          SubnetId: !Ref Subnet02
          RouteTableId: !Ref RouteTable
    
      Subnet03RouteTableAssociation:
        Condition: HasMoreThan2Azs
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          SubnetId: !Ref Subnet03
          RouteTableId: !Ref RouteTable
    
      ControlPlaneSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
          GroupDescription: Cluster communication with worker nodes
          VpcId: !Ref VPC
    
    # ------------------------ EKS cluster formation ------------------
    
      EKSRole:
        Type: AWS::IAM::Role
        Properties:
          ManagedPolicyArns:
          -  "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
          -  "arn:aws:iam::aws:policy/AmazonEKSServicePolicy"
          AssumeRolePolicyDocument: {
            "Version" : "2012-10-17",
            "Statement": [
              {
                "Effect": "Allow",
                "Principal": {
                  "Service": [ "eks.amazonaws.com" ]
                },
                "Action": [ "sts:AssumeRole" ]
              }
            ]
          }
    
      AmazonEKS:
        Type: AWS::EKS::Cluster
        Properties: 
          Name: !Ref ClusterName
          ResourcesVpcConfig:
            SecurityGroupIds: 
              - Ref: ControlPlaneSecurityGroup
            SubnetIds: [!Ref Subnet01, !Ref Subnet02, !Ref Subnet03]
          RoleArn: {
            "Fn::GetAtt" : [
              "EKSRole", "Arn"
            ]
          }
          Version: 1.13
    
    # ----------------------Node Configuration -----------------------
    
      NodeInstanceProfile:
        Type: AWS::IAM::InstanceProfile
        Properties:
          Path: "/"
          Roles:
            - !Ref NodeInstanceRole
    
      NodeInstanceRole:
        Type: AWS::IAM::Role
        Properties:
          AssumeRolePolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Principal:
                  Service: ec2.amazonaws.com
                Action: sts:AssumeRole
          Path: "/"
          ManagedPolicyArns:
            - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
            - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
            - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
    
      NodeSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
          GroupDescription: Security group for all nodes in the cluster
          VpcId: !Ref VPC
          Tags:
            - Key: !Sub kubernetes.io/cluster/${ClusterName}
              Value: owned
    
      NodeSecurityGroupIngress:
        Type: AWS::EC2::SecurityGroupIngress
        DependsOn: NodeSecurityGroup
        Properties:
          Description: Allow node to communicate with each other
          GroupId: !Ref NodeSecurityGroup
          SourceSecurityGroupId: !Ref NodeSecurityGroup
          IpProtocol: -1
          FromPort: 0
          ToPort: 65535
    
      NodeSecurityGroupFromControlPlaneIngress:
        Type: AWS::EC2::SecurityGroupIngress
        DependsOn: NodeSecurityGroup
        Properties:
          Description: Allow worker Kubelets and pods to receive communication from the cluster control plane
          GroupId: !Ref NodeSecurityGroup
          SourceSecurityGroupId: !Ref ControlPlaneSecurityGroup
          IpProtocol: tcp
          FromPort: 1025
          ToPort: 65535
    
      ControlPlaneEgressToNodeSecurityGroup:
        Type: AWS::EC2::SecurityGroupEgress
        DependsOn: NodeSecurityGroup
        Properties:
          Description: Allow the cluster control plane to communicate with worker Kubelet and pods
          GroupId: !Ref ControlPlaneSecurityGroup
          DestinationSecurityGroupId: !Ref NodeSecurityGroup
          IpProtocol: tcp
          FromPort: 1025
          ToPort: 65535
    
      NodeSecurityGroupFromControlPlaneOn443Ingress:
        Type: AWS::EC2::SecurityGroupIngress
        DependsOn: NodeSecurityGroup
        Properties:
          Description: Allow pods running extension API servers on port 443 to receive communication from cluster control plane
          GroupId: !Ref NodeSecurityGroup
          SourceSecurityGroupId: !Ref ControlPlaneSecurityGroup
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
    
      ControlPlaneEgressToNodeSecurityGroupOn443:
        Type: AWS::EC2::SecurityGroupEgress
        DependsOn: NodeSecurityGroup
        Properties:
          Description: Allow the cluster control plane to communicate with pods running extension API servers on port 443
          GroupId: !Ref ControlPlaneSecurityGroup
          DestinationSecurityGroupId: !Ref NodeSecurityGroup
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
    
      ClusterControlPlaneSecurityGroupIngress:
        Type: AWS::EC2::SecurityGroupIngress
        DependsOn: NodeSecurityGroup
        Properties:
          Description: Allow pods to communicate with the cluster API Server
          GroupId: !Ref ControlPlaneSecurityGroup
          SourceSecurityGroupId: !Ref NodeSecurityGroup
          IpProtocol: tcp
          ToPort: 443
          FromPort: 443
    
      NodeGroup:
        Type: AWS::AutoScaling::AutoScalingGroup
        Properties:
          DesiredCapacity: !Ref NodeAutoScalingGroupDesiredCapacity
          LaunchConfigurationName: !Ref NodeLaunchConfig
          MinSize: '1'
          MaxSize: '3'
          TargetGroupARNs:
            - Ref: WebAppTargetGroup
          VPCZoneIdentifier: 
            - Ref: "Subnet01"
            - Ref: "Subnet02"
            - Ref: "Subnet03"
          Tags:
            - Key: Name
              Value: !Sub ${ClusterName}-${NodeGroupName}-Node
              PropagateAtLaunch: true
            - Key: !Sub kubernetes.io/cluster/${ClusterName}
              Value: owned
              PropagateAtLaunch: true
        UpdatePolicy:
          AutoScalingRollingUpdate:
            MaxBatchSize: 1
            MinInstancesInService: !Ref NodeAutoScalingGroupDesiredCapacity
            PauseTime: PT5M
    
      NodeLaunchConfig:
        Type: AWS::AutoScaling::LaunchConfiguration
        Properties:
          AssociatePublicIpAddress: true
          IamInstanceProfile: !Ref NodeInstanceProfile
          ImageId: ami-0d1cd67c26f5fca19
          InstanceType: t3.medium
          KeyName: !Ref KeyName
          SecurityGroups:
            - !Ref NodeSecurityGroup
          BlockDeviceMappings:
            - DeviceName: /dev/xvda
              Ebs:
                VolumeSize: '10'
                VolumeType: gp2
                DeleteOnTermination: true
          UserData:
            Fn::Base64: 
              !Sub |
                #!/bin/bash
                set -o xtrace
                /etc/eks/bootstrap.sh ${ClusterName} ${BootstrapArguments}
                /opt/aws/bin/cfn-signal --exit-code $? \
                         --stack  ${AWS::StackName} \
                         --resource NodeGroup  \
                         --region ${AWS::Region}
    
      WebAppTargetGroup:
        Type: AWS::ElasticLoadBalancingV2::TargetGroup
        Properties:
          HealthCheckIntervalSeconds: 10
          HealthCheckPath: /
          HealthCheckProtocol: HTTP
          HealthCheckTimeoutSeconds: 8
          HealthyThresholdCount: 2
          Port: 80
          Protocol: HTTP
          UnhealthyThresholdCount: 5
          TargetType: instance
          VpcId: !Ref 'VPC'
    
    # --------------------- Outputs ----------------------------------
    
    Outputs:
    
      SubnetIds:
        Description: All subnets in the VPC
        Value:
          Fn::If:
          - HasMoreThan2Azs
          - !Join [ ",", [ !Ref Subnet01, !Ref Subnet02, !Ref Subnet03 ] ]
          - !Join [ ",", [ !Ref Subnet01, !Ref Subnet02 ] ]
    
      SecurityGroups:
        Description: Security group for the cluster control plane communication with worker nodes
        Value: !Join [ ",", [ !Ref ControlPlaneSecurityGroup ] ]
    
      VpcId:
        Description: The VPC Id
        Value: !Ref VPC
    
      NodeInstanceRole:
        Description: The node instance role
        Value: !GetAtt NodeInstanceRole.Arn
    
      NodeSecurityGroup:
        Description: The security group for the node group
        Value: !Ref NodeSecurityGroup
